<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_skip_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jrgen.test1.SkipScreen">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_gravity="center"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1.2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/reminderQuestion"
            android:id="@+id/textView1"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

    </RelativeLayout>
    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:layout_weight="2"
                android:text="@string/yes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="26sp"
                android:id="@+id/button2" />

            <Button
                android:layout_weight="2"
                android:text="@string/no"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAllCaps="false"
                android:textSize="26sp"
                android:id="@+id/button3" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
