<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_test_text_size"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jrgen.test1.TextSize">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_gravity="center"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textSizeTitle"
            android:layout_gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:baselineAligned="false"
        android:orientation="horizontal" >
        <ScrollView
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="vertical">
                <TextView
                    android:text="@string/instructionTextSize"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textView" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1.1"
        android:orientation="horizontal">
        <Button
            android:text="@string/shrink"
            android:layout_width="0dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:id="@+id/button2"
            android:layout_weight="1" />

        <Button
            android:text="@string/enlarge"
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_height="match_parent"
            android:id="@+id/button3"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:text="@string/pContinue"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:id="@+id/button1" />
    </LinearLayout>

</LinearLayout>
