<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_button_select"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jrgen.test1.Colour"
    tools:showIn="@layout/activity_colour">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_gravity="center"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colourTitle"
            android:layout_gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:contentDescription="@string/colour"
                android:id="@+id/imageButton1"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/farben_rot"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"  />

        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/farben_gelb"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/colour" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:contentDescription="@string/colour"
                android:text="@string/button"
                android:id="@+id/imageButton3"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/farben_gruen"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:contentDescription="@string/colour"
                android:id="@+id/imageButton4"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/farben_blau"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:contentDescription="@string/colour"
                android:id="@+id/imageButton5"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/farben_braun"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:contentDescription="@string/colour"
                android:id="@+id/imageButton6"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/farben_grau"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="20dp"
        android:layout_weight="0.9"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">
        <Button
            android:text="@string/pContinue"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:id="@+id/button1" />

    </LinearLayout>


</TableLayout>
