<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_instruction"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.example.jrgen.test1.Instruction">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_gravity="center"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberPatternTitle"
            android:layout_gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:id="@+id/toolbar_title" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_weight="1.2"
        android:layout_width="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="horizontal"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/quadrat_weiss"
                    android:id="@+id/imageView1"
                    android:contentDescription="@string/square"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/quadrat_weiss"
                    android:id="@+id/imageView2"
                    android:contentDescription="@string/square"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/quadrat_weiss"
                    android:contentDescription="@string/square"
                    android:id="@+id/imageView3" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/quadrat_weiss"
                    android:id="@+id/imageView4"
                    android:contentDescription="@string/square" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/quadrat_weiss"
                    android:contentDescription="@string/square"
                    android:id="@+id/imageView5" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/quadrat_weiss"
                    android:contentDescription="@string/square"
                    android:id="@+id/imageView6" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/quadrat_weiss"
                    android:contentDescription="@string/square"
                    android:id="@+id/imageView7" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/quadrat_weiss"
                    android:contentDescription="@string/square"
                    android:id="@+id/imageView8" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/quadrat_weiss"
                    android:contentDescription="@string/square"
                    android:id="@+id/imageView9" />
            </LinearLayout>
        </GridLayout>
    </RelativeLayout>

    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"

        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/pContinue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textAllCaps="false"
            android:textSize="26sp"
            android:id="@+id/button1" />
    </LinearLayout>

</LinearLayout>